--- a/App/App/Views/BookFormView.xaml
+++ b/App/App/Views/BookFormView.xaml
@@ -15,6 +15,19 @@
             <TextBox x:Name="AuthorBox" Margin="0 5"/>
             <TextBlock Text="Genre" />
             <TextBox x:Name="GenreBox" Margin="0 5"/>
+            <TextBlock Text="Reading Status" />
+            <ComboBox x:Name="StatusBox" SelectedIndex="0" Margin="0 5">
+                <ComboBoxItem Content="Not Started" />
+                <ComboBoxItem Content="Reading" />
+                <ComboBoxItem Content="Completed" />
+            </ComboBox>
+
+            <TextBlock Text="Current Page" />
+            <TextBox x:Name="CurrentPageBox" Margin="0 5" />
+
+            <TextBlock Text="Last Read Date" />
+            <DatePicker x:Name="LastReadDatePicker" Margin="0 5" />
+
         </StackPanel>
 
         <StackPanel Grid.Row="1" Orientation="Horizontal" HorizontalAlignment="Right" Margin="0 20 0 0">
